[package] 
name = "is31fl3729"
version = "0.1.3"
edition = "2021"
authors = ["Liz Frost", "Daniel Schaefer", "C. Scott Ananian"]
categories = ["embedded", "no-std"]
description = "Driver for Lumissil Microsystem's IS31FL3729 IC"
license = "MIT"
repository = "https://github.com/cscott/is31fl3729-rs"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.7"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
panic-halt = "0.2.0"
stm32g0xx-hal = {version = "0.2.0", features = ["rt", "stm32g071"]}
tinybmp = "0.5.0"

[features]
sevensegment = []
default = ["sevensegment"]
